# lenmus

./: .bzrignore  .gitignore  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  INSTALL  Info.plist.in  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  config.h.in  configure  configure.ac  lenmus-version-from-git.cmake  lenmus_config.h.cmake  lenmus_version.h.cmake  lomse-build-options.cmake  lomse-version.cmake  manpage.cmake  version-info.cmake
langtool/: CMakeLists.txt  building.txt  langtool_config.h.cmake
langtool/layout/: leaflet_banner_right.psd
langtool/src/: DlgCompileBook.cpp  DlgCompileBook.h  DlgRunAgdoc.cpp  DlgRunAgdoc.h  MainFrame.cpp  MainFrame.h  Paths.cpp  Paths.h  command.cpp  command.h  ebook_processor.cpp  ebook_processor.h  ebook_processor_ldp.cpp  ebook_processor_ldp.h  help_processor.cpp  help_processor.h  html_converter.cpp  html_converter.h  installer.cpp  installer.h  langtool.cpp  langtool.rc  parser.cpp  parser.h
langtool/xrc/: DlgCompileBook.fbp  DlgCompileBook.xrc  langtool.pjd
src/: Makefile.am  Makefile.in
src/app/: AboutDialog.cpp  AboutDialog.h  ArtProvider.cpp  ArtProvider.h  DlgCfgEarIntervals.cpp  DlgCfgEarIntervals.h  DlgCfgIdfyCadence.cpp  DlgCfgIdfyCadence.h  DlgCfgIdfyChord.cpp  DlgCfgIdfyChord.h  DlgCfgIdfyScale.cpp  DlgCfgIdfyScale.h  DlgCfgScoreReading.cpp  DlgCfgScoreReading.h  DlgCfgTheoIntervals.cpp  DlgCfgTheoIntervals.h  DlgDebug.cpp  DlgDebug.h  DlgDebugTrace.cpp  DlgDebugTrace.h  DlgPatternEditor.cpp  DlgPatternEditor.h  DlgUploadLog.cpp  DlgUploadLog.h  EditFrame.cpp  EditFrame.h  ErrorDlg.cpp  ErrorDlg.h  FontManager.cpp  FontManager.h  KbdCmdParser.cpp  KbdCmdParser.h  LangChoiceDlg.cpp  LangChoiceDlg.h  Logger.cpp  Logger.h  MainFrame.cpp  MainFrame.h  MidiWizard.cpp  MidiWizard.h  (+62 more)
src/auxmusic/: Cadence.cpp  Cadence.h  Chord.cpp  Chord.h  ChordManager.cpp  ChordManager.h  Composer.cpp  Composer.h  ComposerV5.cpp  ComposerV5.h  ComposerV6.cpp  ComposerV6.h  Conversion.cpp  Conversion.h  Harmony.cpp  Harmony.h  HarmonyExercisesData.cpp  HarmonyExercisesData.h  Interval.cpp  Interval.h  ScalesManager.cpp  ScalesManager.h  lenmus_cadence.cpp  lenmus_chord.cpp  lenmus_composer.cpp  lenmus_conversion.cpp  lenmus_harmony.cpp  lenmus_harmony_exercises_data.cpp  lenmus_images_creator.cpp  lenmus_interval.cpp  lenmus_scale.cpp  lenmus_scales_manager.cpp  lenmus_score_corrector.cpp  lenmus_utilities.cpp
src/dialogs/: lenmus_dlg_books.cpp  lenmus_dlg_choose_lang.cpp  lenmus_dlg_clefs.cpp  lenmus_dlg_counters.cpp  lenmus_dlg_debug.cpp  lenmus_dlg_levels.cpp  lenmus_dlg_metronome.cpp  lenmus_text_editor.cpp
src/exercises/: CadencesConstrains.cpp  CadencesConstrains.h  ChordConstrains.cpp  ChordConstrains.h  Constrains.cpp  Constrains.h  CountersAuxCtrol.cpp  CountersAuxCtrol.h  CountersCtrol.cpp  CountersCtrol.h  EarChordConstrains.cpp  EarChordConstrains.h  EarChordCtrol.cpp  EarChordCtrol.h  EarCompareIntvCtrol.cpp  EarCompareIntvCtrol.h  EarExerciseCtrol.cpp  EarExerciseCtrol.h  EarIntervalsCtrol.cpp  EarIntervalsCtrol.h  EarIntvalConstrains.cpp  EarIntvalConstrains.h  EarModeCtrol.cpp  EarModeCtrol.h  EarScalesCtrol.cpp  EarScalesCtrol.h  EarTunningCtrol.cpp  EarTunningCtrol.h  ExerciseCtrol.cpp  ExerciseCtrol.h  Generators.cpp  Generators.h  HarmonyConstrains.cpp  HarmonyConstrains.h  IdfyCadencesCtrol.cpp  IdfyCadencesCtrol.h  IdfyChordCtrol.cpp  IdfyChordCtrol.h  IdfyExerciseCtrol.cpp  IdfyExerciseCtrol.h  (+39 more)
src/globals/: Colors.cpp  Colors.h  Paths.cpp  Paths.h  lenmus_actions.cpp  lenmus_colors.cpp  lenmus_injectors.cpp  lenmus_paths.cpp
src/graphic/: AggDrawer.cpp  AggDrawer.h  BoxInstrSlice.cpp  BoxInstrSlice.h  BoxPage.cpp  BoxPage.h  BoxScore.cpp  BoxScore.h  BoxSlice.cpp  BoxSlice.h  BoxSliceInstr.cpp  BoxSliceInstr.h  BoxSliceVStaff.cpp  BoxSliceVStaff.h  BoxSystem.cpp  BoxSystem.h  BoxVStaffSlice.cpp  BoxVStaffSlice.h  Drawer.cpp  Drawer.h  Formatter4.cpp  Formatter4.h  GMObject.cpp  GMObject.h  GraphicManager.cpp  GraphicManager.h  Handlers.cpp  Handlers.h  Shape.cpp  Shape.h  ShapeArch.cpp  ShapeArch.h  ShapeBarline.cpp  ShapeBarline.h  ShapeBeam.cpp  ShapeBeam.h  ShapeBracket.cpp  ShapeBracket.h  ShapeLine.cpp  ShapeLine.h  (+20 more)
src/html/: BookContentsBox.cpp  BookContentsBox.h  BookData.cpp  BookData.h  ContentsBoxCtrol.cpp  ContentsBoxCtrol.h  EarChordCtrolParms.h  EarScalesCtrolParms.h  EarTunningCtrolParms.h  HelpController.cpp  HelpController.h  HtmlListBox.cpp  HtmlListBox.h  HtmlWindow.cpp  HtmlWindow.h  IdfyCadencesCtrolParms.h  IdfyChordCtrolParms.h  IdfyNotesCtrolParms.h  IdfyScalesCtrolParms.h  IdfyTonalityCtrolParms.h  ObjectParams.cpp  ObjectParams.h  ParamsParser.cpp  ParamsParser.h  ScoreCtrolParams.h  Tags.cpp  TextBookController.cpp  TextBookController.h  TextBookFrame.cpp  TextBookFrame.h  TheoHarmonyCtrolParms.h  TheoIntervalsCtrolParams.h  TheoMusicReadingCtrolParms.h  TheoSideReadingCtrolParms.h  VirtualBooks.cpp  VirtualBooks.h
src/ldp_parser/: AuxString.cpp  AuxString.h  LDPNode.cpp  LDPNode.h  LDPParser.cpp  LDPParser.h  LDPTags.cpp  LDPTags.h  LDPToken.cpp  LDPToken.h
src/mdi/: ChildFrame.cpp  ChildFrame.h  ClientWindow.cpp  ClientWindow.h  DocViewMDI.cpp  DocViewMDI.h  NotebookMDI.h  ParentFrame.cpp  ParentFrame.h
src/options/: ColorsOptPanel.cpp  ColorsOptPanel.h  InternetOptPanel.cpp  InternetOptPanel.h  LangOptionsPanel.cpp  LangOptionsPanel.h  Languages.cpp  Languages.h  OptionsDlg.cpp  OptionsDlg.h  OptionsPanel.h  OtherOptionsPanel.cpp  OtherOptionsPanel.h  ToobarsOptPanel.cpp  ToolbarsOptPanel.h  lenmus_colors_opt_panel.cpp  lenmus_internet_opt_panel.cpp  lenmus_lang_opt_panel.cpp  lenmus_languages.cpp  lenmus_options_dlg.cpp  lenmus_other_opt_panel.cpp  lenmus_playback_opt_panel.cpp  lenmus_shortcuts_opt_panel.cpp  lenmus_sound_opt_panel.cpp  lenmus_toolbar_opt_panel.cpp
src/properties/: lenmus_dlg_properties.cpp  lenmus_properties_barline.cpp  lenmus_properties_general.cpp  lenmus_properties_page.cpp
src/score/: Accidental.cpp  Accidental.h  AuxObj.cpp  AuxObj.h  Barline.cpp  Barline.h  Beam.cpp  Beam.h  Chord.cpp  (+78 more)
(+2144 files in other folders)
